# ChangeLog for app-text/pdf2djvu
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/pdf2djvu/ChangeLog,v 1.17 2013/01/09 17:43:06 ssuominen Exp $

  09 Jan 2013; Samuli Suominen <ssuominen@gentoo.org> -pdf2djvu-0.7.14.ebuild,
  -pdf2djvu-0.7.15.ebuild:
  old

*pdf2djvu-0.7.16 (09 Jan 2013)

  09 Jan 2013; Samuli Suominen <ssuominen@gentoo.org> +pdf2djvu-0.7.16.ebuild:
  Version bump.

*pdf2djvu-0.7.15 (25 Oct 2012)

  25 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +pdf2djvu-0.7.15.ebuild,
  -pdf2djvu-0.7.12.ebuild, -pdf2djvu-0.7.13.ebuild:
  Version bump and make test work correctly.

*pdf2djvu-0.7.14 (20 Sep 2012)

  20 Sep 2012; Tim Harder <radhermit@gentoo.org> +pdf2djvu-0.7.14.ebuild:
  Version bump.

  08 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  pdf2djvu-0.7.12.ebuild, pdf2djvu-0.7.13.ebuild:
  xpdf-headers useflag for poppler is going away

*pdf2djvu-0.7.13 (14 Jul 2012)

  14 Jul 2012; Hanno Boeck <hanno@gentoo.org> +pdf2djvu-0.7.13.ebuild:
  Version bump.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> pdf2djvu-0.7.12.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  23 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -pdf2djvu-0.7.10.ebuild,
  -pdf2djvu-0.7.11.ebuild:
  old

*pdf2djvu-0.7.12 (23 Jan 2012)

  23 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +pdf2djvu-0.7.12.ebuild:
  Version bump.

*pdf2djvu-0.7.11 (19 Oct 2011)

  19 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> +pdf2djvu-0.7.11.ebuild:
  Version bump to fix building with poppler >= 0.18 wrt #384985 by Guillaume
  Horel

  31 Aug 2011; Tim Harder <radhermit@gentoo.org> -pdf2djvu-0.7.7.ebuild,
  -pdf2djvu-0.7.8.ebuild:
  Remove old.

*pdf2djvu-0.7.10 (31 Aug 2011)

  31 Aug 2011; Tim Harder <radhermit@gentoo.org> +pdf2djvu-0.7.10.ebuild:
  Version bump.

*pdf2djvu-0.7.8 (23 Aug 2011)

  23 Aug 2011; Tim Harder <radhermit@gentoo.org> +pdf2djvu-0.7.8.ebuild:
  Version bump.
