@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST pdf2djvu_0.7.16.tar.gz 320802 SHA256 dbda2086d0f164d0da6e785f8ffd6f252bf805ce7930127d42aab9dbf1bde4f9 SHA512 ccd4b11137b730226f42382669517a2cd8eed235fb50ef67e0958194e5a290282a450f5118c6117f1f77a099c79c4755bf8e5ebf1dbf9743ac74cf78d830c538 WHIRLPOOL 8d7b28f7df5135cd97cf458adf0979daa177fc2d0e3e41eb20698dceb92ddb41c4fc0282d0d0423dae68402d7cfa354df4c7dd8e77cbf93567d4889158dc80e5
-EBUILD pdf2djvu-0.7.16.ebuild 1078 SHA256 65af10343c61acee57d14dff2218668fa98cfbf53820cfcad946c4b0fa8ddc92 SHA512 f97b626f62a2498efadbcc3cdc8879e5e1eb39ca542b50baa4c3e9ae2aa1212157dc513473441835a8ab97626c0751e845bdf4f8e23b829804a955ad8a99765f WHIRLPOOL 0a92f24adab2bbf126a1d9fb6cfd38803a4745d4bf09e393bb51050f131adb527bd17b78754f158a53de42cf98dc07f92df24772954d941fd4072f36fd54363c
-MISC ChangeLog 2619 SHA256 4107a6f7293f754bc727a2036122a5cd33a8b1c3fc87eb8e974931e6274e434a SHA512 0450c07881f4fa7bef3aa645888785132e503982a25c7ebfe96a3a0c9729498d6f6a25dedf7df70d2c2565c266374271529908c25eac5523d39712d1c160d584 WHIRLPOOL c6eba06207c387abcd407bc0d857f74757367e90fc8005aefd27f3f8247d30c8e15de5c3999ab4a67a048447cea9a8a445cefc38d72a51641244e1a2ad998958
+EBUILD pdf2djvu-0.7.16.ebuild 1088 SHA256 d2df55a9fccfa4c773411cf17666c094f8c70b1fd04bb575690cb3514dd7f2a5 SHA512 5a17633f5eb7e87da2418284e8e9493bcb3318ea0efc26ed49fd881384613bef77e80d827a6e18bc379fcba94fbd4f969f0b0129500cf7994844cde11f4222fb WHIRLPOOL 9e25df7607ebc868a3151cd4359a9efe195bf19e43fd862494b5331c495734eb175bd7684762a0829537b3c78850773e85fc6a1c5fb2678358080a5ed4a64b0f
+MISC ChangeLog 2756 SHA256 c9e31627c8d6977777ef3a855991dee36bdf1084f37cf34f4e05b2600a8259d8 SHA512 939e0bc987102dfcbbd1337ad4b90dd0db99e258ce0fbedab7388845777d417ad79fb63088ed2846bf8e77e76e5fc73ee06e45a9dbce918eadfa34b1c8336795 WHIRLPOOL 097abdcd451fc35f99622199761e7d1a56950f6d35620b4b341d2ead2360a6144c503f87fe97cab2ddf614e8d8bcb665934ff07aad82af89aa216cfa45d4dce5
 MISC metadata.xml 270 SHA256 4fbe47021befe14b868a4ae797d823071a9c455a2a5e2b9ad69cd31705f1d0bb SHA512 e0d19fc794b98c685739dbf64d5bb8667db40d539d30802ffd6c78f03884b36d0367632186abf3e40c19e37bd6503566a9ac00cc8d1832e1a36216ee0f62a5ec WHIRLPOOL ed94591867c45d76ce7a3f25aed252eecf0a3dda7107d263cfec44ffe0d4f32b3d43a547586bb0e14009642940c191865ea900f95653435b25f50bd171327436
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQ7awCAAoJEEdUh39IaPFNeYkH/2Q0CsGE/Wd4Yb5aUS/4s4yF
-EL2rm370IeDIlZADORl3aGuFkH6tRc+adqaQwUULEieHwxqTez0F2yLgz0P7ejxj
-arSLZrGj8AKygUaEK7njCGlzFMg84CBLDGzbqXlrFmdV/e0KR0ZdLMERr+Y4tGSS
-fhkdvjiLAAgekQSUjFM9hbNYPYkUaj5w+lrspb4rrcidm3yIFQdO+203wg7WlJKd
-Aqk/HiTV2Ve6XhX/xSNSLNCs1NEg/DaFdsgRBaDaK2PYkhdCWSfo+35DrRj3acV6
-Qt7o0ijTvSkUvI++aoUDjo2gqwAHP7LJGDivayreND+Uqpjn5KrSfbxHDs1taM8=
-=6ILI
+iQEcBAEBCAAGBQJRRcNvAAoJEEdUh39IaPFN4AEH/RjLnDyrYvDr4cNfqq7LOBX6
++4HuRi8JwBsCEULIpelmq7Y+OI32pHYDFSN2CGEqy9qUFxf3ea/D03RUerNkMQSQ
++23uegKx88DVXjIoEzj/NVtdyR4DwiyPww8iwn+gRFoNguXabyxTj2ts02tYtrA/
+TEn1LzTYd5DavtwAftc5CgUT92X5cXCh2GfxaMX5PKWhj7DuqGu26U7H9Taoe7oR
+9j4a2WPvx1Ww3R5N02jZpwrVz06z5v1omn9tqIYkIwj1fmqct3fFlyH2NJlUOpfs
+jkUXHeWM+VAlrJrdIj/BLVJeTXDlke8K0vTMw8Rm1kNozlUMfnX/1rMQiF7I9O4=
+=OSoE
 -----END PGP SIGNATURE-----
